@@ -1,14 +1,18 @@
 package org.gentar.biology.gene_list.filter;
 
+import lombok.Getter;
+import lombok.Setter;
 import org.gentar.biology.project.search.filter.FilterTypes;
 
 import java.util.List;
 import java.util.Map;
 
+@Setter
 public class GeneListFilter
 {
     private Map<FilterTypes, List<String>> filters;
 
+    @Getter
     private String consortiumName;
     private Boolean visible;
 
@@ -17,18 +21,13 @@ public class GeneListFilter
         return new GeneListFilter();
     }
 
-    public String getConsortiumName()
-    {
-        return consortiumName;
-    }
-
     public Boolean getVisible()
     {
         Boolean result = null;
         List<String> valuesAsString = filters.getOrDefault(FilterTypes.VISIBLE, null);
         if (valuesAsString != null && !valuesAsString.isEmpty())
         {
-            result = Boolean.parseBoolean(valuesAsString.get(0));
+            result = Boolean.parseBoolean(valuesAsString.getFirst());
         }
         return result;
     }
@@ -38,18 +37,4 @@ public class GeneListFilter
         return filters.getOrDefault(FilterTypes.ACC_ID, null);
     }
 
-    public void setConsortiumName(String consortiumName)
-    {
-        this.consortiumName = consortiumName;
-    }
-
-    public void setVisible(Boolean visible)
-    {
-        this.visible = visible;
-    }
-
-    public void setFilters(Map<FilterTypes, List<String>> filters)
-    {
-        this.filters = filters;
-    }
 }
