@@ -51,11 +51,11 @@ public class MgiPhenotypingColonyReportServiceImpl implements MgiPhenotypingColo
                         .sorted(Comparator.comparing(x -> filteredMutationGeneMap.get(
                                 filteredOutcomeMutationMap.get(x.getOutcomeId()).getMutationId()).getSymbol()
                                 )
-                        ).collect(Collectors.toList());
+                        ).toList();
 
         return sortedEntries
                 .stream()
-                .map(x -> constructRow(x))
+                .map(this::constructRow)
                 .collect(Collectors.toList());
     }
 
@@ -88,11 +88,9 @@ public class MgiPhenotypingColonyReportServiceImpl implements MgiPhenotypingColo
     private String assembleReport() {
 
         String header = generateReportHeaders();
-        String report = reportRows
-                .stream()
-                .collect(Collectors.joining("\n"));
+        String report = String.join("\n", reportRows);
 
-        return Arrays.asList(header,report).stream().collect(Collectors.joining("\n"));
+        return String.join("\n", header, report);
 
     }
 
@@ -113,11 +111,7 @@ public class MgiPhenotypingColonyReportServiceImpl implements MgiPhenotypingColo
                 "GenTaR Mutation Identifier"
         );
 
-        String headerString =   headers
-                .stream()
-                .collect(Collectors.joining("\t"));
-
-        return headerString;
+        return String.join("\t", headers);
 
     }
 }
