@@ -162,7 +162,7 @@ class OutcomeControllerTest extends ControllerTestTemplate
         List<HistoryDTO> historyDTOS = changeResponse.getHistoryDTOs();
         assertThat(historyDTOS.size(), is(1));
 
-        HistoryDTO historyDTO = historyDTOS.get(0);
+        HistoryDTO historyDTO = historyDTOS.getFirst();
         assertThat(historyDTO.getComment(), is("Outcome updated"));
 
         List<HistoryDetailDTO> historyDetailDTOS = historyDTO.getDetails();
